# llm-chess

./: LICENSE  README.md  pyproject.toml
src/: analyse_human_move.lmql  chess.lmql  main.py  make_move.lmql
